# rust-todo-app

./: .env.SAMPLE  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: rust.yml
migrations/2024-05-29-100039_label_and_todos/: down.sql  up.sql
migrations/2024-07-14-102245_added_datetimes/: down.sql  up.sql
migrations/2024-07-15-061732_added_datetimes_todos/: down.sql  up.sql
src/: main.rs
src/api/: custom_codes.rs  exceptions.rs  mod.rs  routes.rs  schema.rs  server.rs
src/api/handlers/: common_handlers.rs  error_handlers.rs  mod.rs  todo_handlers.rs
src/cli/: app.rs  args.rs
src/core/: config.rs  db.rs  enums.rs  exceptions.rs  logging.rs  mod.rs
src/todo/: db_schema.rs  mod.rs  models.rs  repo.rs  schema.rs  schemas.rs  services.rs  types.rs
