[package]
edition = "2021"
name = "rust_basic_todo"
version = "0.0.1"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "serde_json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
log = "0.4.21"
env_logger = "0.11.3"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["sync", "macros", "rt-multi-thread"] }
dotenvy = "0.15.7"

[[bin]]
name = "rust_basic_todo"
path = "./src/main.rs"
