[package]
edition = "2021"
name = "rust_basic_todo"
version = "0.0.1"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "serde_json"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
axum = "0.7.5"
tokio = { version = "1.38", features = ["sync", "macros", "rt-multi-thread"] }
dotenvy = "0.15"
axum-macros = "0.4.1"
thiserror = "1.0.61"

[[bin]]
name = "rust_basic_todo"
path = "./src/main.rs"
