[package]
edition = "2021"
name = "rust_basic_todo"
version = "0.0.1"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
chrono = {version = "0.4", features = ["serde"]}
deadpool-diesel = {version = "0.6", features = ["postgres"]}
diesel = {version = "2.2", features = ["postgres", "serde_json", "chrono"]}
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.61"
tokio = {version = "1.38", features = ["sync", "macros", "rt-multi-thread"]}

[[bin]]
name = "rust_basic_todo"
path = "./src/main.rs"
